--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="pds.isintheair.fr.crm_tab" >
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
@@ -18,10 +19,9 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_login"
             android:theme="@style/FullscreenTheme" >
-
         </activity>
         <activity
-            android:name=".CrvMainActivity"
+            android:name=".crv.CrvMainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
@@ -30,8 +30,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".crv.CreateCrvActivity"
+            android:windowSoftInputMode="stateHidden" />
 
-        <activity android:name=".CreateCrvActivity" android:windowSoftInputMode="stateHidden" ></activity>
     </application>
 
 </manifest>
