--- a/android-crmtab/app/build.gradle
+++ b/android-crmtab/app/build.gradle
@@ -22,6 +22,13 @@ android {
         exclude 'META-INF/license.txt'
     }
 }
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    compile 'com.hudomju:swipe-to-dismiss-undo:1.0'
+}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
