--- a/android-crmtab/app/build.gradle
+++ b/android-crmtab/app/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.application'
+apply plugin    : 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 
 android {
@@ -28,7 +28,7 @@ dependencies {
     compile "com.raizlabs.android:DBFlow:2.2.1"
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
-    compile 'com.squareup.okhttp:okhttp:2.6.0'
+    compile 'com.squareup:otto:1.3.8'
     compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.google.code.gson:gson:2.4'
 }
