--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -21,18 +21,22 @@
             android:theme="@style/FullscreenTheme" >
         </activity>
         <activity
-            android:name=".crv.CrvMainActivity"
+            android:name=".crv.view.CrvMainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".crv.view.CreateCrvActivity"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".crv.view.CrvHomeActivity"
+            android:label="CRM-tab" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".crv.CreateCrvActivity"
-            android:windowSoftInputMode="stateHidden" />
     </application>
 
 </manifest>
