--- a/android-crmtab/app/build.gradle
+++ b/android-crmtab/app/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.google.android.gms:play-services:8.3.0'
     compile 'com.android.support:design:23.1.1'
+
+    compile 'com.squareup:otto:1.3.8'
 }
