--- a/android-crmtab/app/build.gradle
+++ b/android-crmtab/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.5'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     compile 'com.squareup:otto:1.3.8'
+    compile 'com.mobsandgeeks:android-saripaar:2.0.3'
 }
