--- a/android-crmtab/app/build.gradle
+++ b/android-crmtab/app/build.gradle
@@ -23,6 +23,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.10.19'
     apt 'com.raizlabs.android:DBFlow-Compiler:2.2.1'
 
     compile 'com.raizlabs.android:DBFlow-Core:2.2.1'
