--- a/Rest-server/pom.xml
+++ b/Rest-server/pom.xml
@@ -148,6 +148,15 @@
 			<version>3.2.0</version>
 		</dependency>
 
+
+		<!-- Morphia -->
+		<dependency>
+			<groupId>org.mongodb.morphia</groupId>
+			<artifactId>morphia</artifactId>
+			<version>1.0.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
