--- a/android-crmtab/app/build.gradle
+++ b/android-crmtab/app/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
     apt 'com.raizlabs.android:DBFlow-Compiler:2.2.1'
+    compile 'com.google.code.gson:gson:2.2.4'
+
 
     compile 'com.raizlabs.android:DBFlow-Core:2.2.1'
     compile 'com.raizlabs.android:DBFlow:2.2.1'
