--- a/android-crmtab/app/build.gradle
+++ b/android-crmtab/app/build.gradle
@@ -25,7 +25,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
     apt 'com.raizlabs.android:DBFlow-Compiler:2.2.1'
-    compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
+    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
 
 
     compile 'com.raizlabs.android:DBFlow-Core:2.2.1'
