--- a/Rest-server/pom.xml
+++ b/Rest-server/pom.xml
@@ -145,6 +145,11 @@
 			<artifactId>junit</artifactId>
 			<version>4.7</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mongodb.morphia</groupId>
+			<artifactId>morphia</artifactId>
+			<version>1.0.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
