made packages and improved interface

--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -21,7 +21,6 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_login"
             android:theme="@style/FullscreenTheme" />
-        <activity android:name=".registercall.AddLogActivity"></activity>
         <activity
             android:name=".registercall.StartCallRegisterActivity"
             android:label="@string/title_activity_start_call_register"
@@ -32,7 +31,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".registercall.PopUpActivity"
+            android:name=".registercall.Views.registeracall.RegisterCallActivity"
             android:label="@string/title_activity_call_log_main"
             android:theme="@style/AppTheme.NoActionBar">
 
