--- a/android-phonintheair/app/src/main/AndroidManifest.xml
+++ b/android-phonintheair/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
-<manifest package="fr.pds.isintheair.phonintheair"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest
+    package="fr.pds.isintheair.phonintheair"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
@@ -8,6 +9,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <activity android:name=".activity.DashboardActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+
+        <service android:name=".service.CallService"/>
     </application>
 
 </manifest>
