--- a/android-phonintheair/app/src/main/AndroidManifest.xml
+++ b/android-phonintheair/app/src/main/AndroidManifest.xml
@@ -2,13 +2,16 @@
     package="fr.pds.isintheair.phonintheair"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".activity.DashboardActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -16,7 +19,22 @@
             </intent-filter>
         </activity>
 
+        <receiver
+            android:name=".broadcastreceiver.BootServiceBroadcastReceiver"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name=".broadcastreceiver.PhoneCallBroadcastReceiver"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="android.intent.action.NEW_OUTGOING_CALL"/>
+                <action android:name="android.intent.action.PHONE_STATE"/>
+            </intent-filter>
+        </receiver>
+
         <service android:name=".service.CallService"/>
     </application>
-
 </manifest>
