--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest
     package="pds.isintheair.fr.crm_tab"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
@@ -15,6 +14,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".uc.phone.call.receive.view.activity.ContactDetailActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -22,13 +22,19 @@
             android:theme="@style/FullscreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity android:name=".uc.phone.call.receive.view.activity.CallActivity"/>
 
+        <receiver
+            android:name=".uc.phone.call.receive.controller.broadcastreceiver.BootServiceBrodcastReceiver"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
         <service android:name=".uc.phone.call.receive.controller.service.CallService"/>
     </application>
-
 </manifest>
