--- a/server-notification/pom.xml
+++ b/server-notification/pom.xml
@@ -4,7 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>fr.pds.isintheair</groupId>
+    <parent>
+      <groupId>fr.pds.isintheair</groupId>
+      <artifactId>crm</artifactId>
+      <version>1.0</version>
+    </parent>
     <artifactId>notifier</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
