--- a/android-crmtab/app/build.gradle
+++ b/android-crmtab/app/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.application'
+apply plugin    : 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 
 android {
@@ -15,7 +15,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug {
