--- a/android-phonintheair/pom.xml
+++ b/android-phonintheair/pom.xml
@@ -25,6 +25,11 @@
             <version>4.1.1.4</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.5</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -41,6 +46,9 @@
                     </sdk>
                     <undeployBeforeDeploy>true</undeployBeforeDeploy>
                     <resourceDirectory>${project.basedir}/app/src/main/res</resourceDirectory>
+                    <testPackages>
+                        <package>fr.pds.isintheair</package>
+                    </testPackages>
                 </configuration>
                 <extensions>true</extensions>
             </plugin>
