--- a/android-phonintheair/app/build.gradle
+++ b/android-phonintheair/app/build.gradle
@@ -20,8 +20,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:1.10.19'
+    androidTestCompile 'junit:junit:4.12'
     compile 'com.google.code.gson:gson:2.4'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    testCompile 'org.robolectric:robolectric:3.0'
+
+
 }
