--- a/android-phonintheair/pom.xml
+++ b/android-phonintheair/pom.xml
@@ -37,6 +37,17 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>com.google.android</groupId>
+            <artifactId>android-test</artifactId>
+            <version>4.1.1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.robolectric</groupId>
+            <artifactId>robolectric</artifactId>
+            <version>3.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.5</version>
@@ -46,12 +57,18 @@
             <artifactId>autobahn-android</artifactId>
             <version>0.5.2-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
         <finalName>Phonintheair</finalName>
         <sourceDirectory>${project.basedir}/app/src/main/java</sourceDirectory>
-        <testSourceDirectory>${project.basedir}/app/src/androidTest</testSourceDirectory>
+        <testSourceDirectory>${project.basedir}/app/src/test</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>com.jayway.maven.plugins.android.generation2</groupId>
