--- a/android-crmtab/app/build.gradle
+++ b/android-crmtab/app/build.gradle
@@ -7,8 +7,8 @@ android {
 
     defaultConfig {
         applicationId "pds.isintheair.fr.crm_tab"
-        minSdkVersion 23
-        targetSdkVersion 23
+        minSdkVersion 22
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
@@ -27,6 +27,7 @@ dependencies {
     testCompile 'org.mockito:mockito-core:1.10.19'
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
+    compile 'com.squareup.okhttp:logging-interceptor:2.6.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
