--- a/android-phonintheair/pom.xml
+++ b/android-phonintheair/pom.xml
@@ -13,6 +13,15 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
+        <repository>
+            <id>central</id>
+            <name>Maven Repository Switchboard</name>
+            <layout>default</layout>
+            <url>http://repo1.maven.org/maven2</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
     </repositories>
 
     <parent>
@@ -31,15 +40,10 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.google.android</groupId>
+            <groupId>android</groupId>
             <artifactId>android</artifactId>
-            <version>4.1.1.4</version>
+            <version>6.0_r2</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.google.android</groupId>
-            <artifactId>android-test</artifactId>
-            <version>4.1.1.4</version>
         </dependency>
         <dependency>
             <groupId>org.robolectric</groupId>
@@ -71,9 +75,9 @@
         <testSourceDirectory>${project.basedir}/app/src/test</testSourceDirectory>
         <plugins>
             <plugin>
-                <groupId>com.jayway.maven.plugins.android.generation2</groupId>
+                <groupId>com.simpligility.maven.plugins</groupId>
                 <artifactId>android-maven-plugin</artifactId>
-                <version>3.9.0-rc.2</version>
+                <version>4.3.0</version>
                 <configuration>
                     <androidManifestFile>${project.basedir}/app/src/main/AndroidManifest.xml</androidManifestFile>
                     <sdk>
