--- a/android-phonintheair/pom.xml
+++ b/android-phonintheair/pom.xml
@@ -40,6 +40,7 @@
 
     <dependencies>
         <dependency>
+            <optional>true</optional>
             <groupId>android</groupId>
             <artifactId>android</artifactId>
             <version>6.0_r2</version>
