--- a/android-phonintheair/app/build.gradle
+++ b/android-phonintheair/app/build.gradle
@@ -26,4 +26,7 @@ dependencies {
     testCompile 'org.robolectric:robolectric:3.0'
 
 
+    testCompile 'junit:junit:4.12'
+    testCompile 'junit:junit:4.12'
+    testCompile 'junit:junit:4.12'
 }
