--- a/android-crmtab/app/build.gradle
+++ b/android-crmtab/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     compile 'com.squareup:otto:1.3.8'
     compile 'com.mobsandgeeks:android-saripaar:2.0.3'
+    compile 'org.osmdroid:osmdroid-android:5.0.1@aar'
 }
