--- a/android-phonintheair/app/build.gradle
+++ b/android-phonintheair/app/build.gradle
@@ -1,8 +1,12 @@
-apply plugin: 'com.android.application'
+apply plugin    : 'com.android.application'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 
     defaultConfig {
         applicationId "fr.pds.isintheair.phonintheair"
@@ -16,17 +20,14 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
     }
 }
 
 dependencies {
-    androidTestCompile 'junit:junit:4.12'
     compile 'com.google.code.gson:gson:2.4'
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'org.robolectric:robolectric:3.0'
-
-
-    testCompile 'junit:junit:4.12'
-    testCompile 'junit:junit:4.12'
-    testCompile 'junit:junit:4.12'
 }
