--- a/server-notification/pom.xml
+++ b/server-notification/pom.xml
@@ -76,5 +76,10 @@
             <artifactId>tyrus-container-grizzly</artifactId>
             <version>1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+        </dependency>
     </dependencies>
 </project>
