Cleaned projects, added diagrams

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.ear
 
@@ -62,7 +61,8 @@ Temporary Items
 *.iml
 
 ## Directory-based project format:
-.idea/
+.idea
+.idea/*
 # if you remove the above rule, at least ignore the following:
 
 # User-specific stuff:
