--- a/android-phonintheair/AndroidManifest.xml
+++ b/android-phonintheair/AndroidManifest.xml
@@ -1,10 +1,17 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="fr.pds.isintheair.phonintheair">
+<manifest
+    package="fr.pds.isintheair.phonintheair"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
-    <application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:supportsRtl="true" android:theme="@style/AppTheme">
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
 
         <activity android:name=".activity.DashboardActivity">
             <intent-filter>
@@ -13,12 +20,16 @@
             </intent-filter>
         </activity>
 
-        <receiver android:enabled="true" android:name=".broadcastreceiver.BootServiceBroadcastReceiver">
+        <receiver
+            android:name=".broadcastreceiver.BootServiceBroadcastReceiver"
+            android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
-        <receiver android:enabled="true" android:name=".broadcastreceiver.PhoneCallBroadcastReceiver">
+        <receiver
+            android:name=".broadcastreceiver.PhoneCallBroadcastReceiver"
+            android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.NEW_OUTGOING_CALL"/>
                 <action android:name="android.intent.action.PHONE_STATE"/>
