--- a/Rest-server/pom.xml
+++ b/Rest-server/pom.xml
@@ -20,6 +20,12 @@
 			<artifactId>json</artifactId>
 			<version>20090211</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mongodb.morphia</groupId>
+			<artifactId>morphia</artifactId>
+			<version>1.0.1</version>
+		</dependency>
+
 
 		<!-- MongoDB -->
 		<dependency>
