Cleaned CRM tab

--- a/android-phonintheair/app/src/main/AndroidManifest.xml
+++ b/android-phonintheair/app/src/main/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <manifest
     package="fr.pds.isintheair.phonintheair"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
+    
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <application
         android:name=".PhonintheairApp"
@@ -26,6 +27,7 @@
             android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </receiver>
         <receiver
