--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -7,35 +7,43 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.READ_PROFILE"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <application
-        android:name=".CrmTabApplication"
+        android:name="fr.pds.isintheair.crmtab.common.CrmTabApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
-            android:name="pds.isintheair.fr.crmtab.uc.phone.call.receive.view.activity.ContactDetailActivity"
+            android:name="fr.pds.isintheair.crmtab.uc.phone.call.receive.ContactDetailActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_login"
             android:theme="@style/FullscreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="pds.isintheair.fr.crmtab.uc.phone.call.receive.view.activity.CallActivity"/>
+        <activity android:name="fr.pds.isintheair.crmtab.uc.phone.call.receive.CallActivity"/>
 
         <receiver
-            android:name="pds.isintheair.fr.crmtab.uc.phone.call.receive.controller.broadcastreceiver.BootServiceBrodcastReceiver"
+            android:name="fr.pds.isintheair.crmtab.uc.phone.call.receive.controller.broadcastreceiver.BootServiceBrodcastReceiver"
             android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </receiver>
 
-        <service android:name="pds.isintheair.fr.crmtab.uc.phone.call.receive.controller.service.CallService"/>
+        <service android:name="fr.pds.isintheair.crmtab.uc.phone.call.receive.controller.service.CallService"/>
+
+        <activity
+            android:name="fr.pds.isintheair.crmtab.common.view.activity.AbstractActivity"
+            android:label="@string/title_activity_abstract">
+        </activity>
     </application>
+
 </manifest>
