added animation to logging page

--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -26,7 +26,10 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_login"
             android:theme="@style/FullscreenTheme">
-
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
 
         <activity
@@ -39,10 +42,7 @@
             android:label="@string/title_activity_main"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+
         </activity>
 
         <activity android:name="net.hockeyapp.android.UpdateActivity"/>
@@ -72,7 +72,7 @@
         </activity>
 
 
-        <activity android:name=".jdatour.receive.CallActivity"/>
+        <activity android:name=".jdatour.uc.phone.call.receive.CallActivity"/>
 
         <activity
             android:name=".crv.view.CrvPreformatedMessage"
