Multiple environments are now handled for crmtab, phonintheair and notifier

--- a/android-crmtab/app/build.gradle
+++ b/android-crmtab/app/build.gradle
@@ -27,6 +27,16 @@ android {
     lintOptions {
         abortOnError false
     }
+
+    productFlavors {
+        prod {
+            applicationIdSuffix = "prod"
+        }
+
+        dev {
+            applicationIdSuffix = "dev"
+        }
+    }
 }
 
 dependencies {
