--- a/android-phonintheair/app/build.gradle
+++ b/android-phonintheair/app/build.gradle
@@ -15,12 +15,22 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
 
+    productFlavors {
+        prod {
+            applicationIdSuffix = "prod"
+        }
+
+        dev {
+            applicationIdSuffix = "dev"
+        }
     }
 }
 
@@ -43,5 +53,4 @@ dependencies {
         exclude module: 'hamcrest-core'
         exclude module: 'objenesis'
     }
-    testCompile 'junit:junit:4.12'
 }
