--- a/android-crmtab/app/build.gradle
+++ b/android-crmtab/app/build.gradle
@@ -68,6 +68,6 @@ dependencies {
     androidTestCompile 'com.crittercism.dexmaker:dexmaker:1.4'
     androidTestCompile 'com.crittercism.dexmaker:dexmaker-dx:1.4'
     androidTestCompile 'com.crittercism.dexmaker:dexmaker-mockito:1.4'
-    compile project(':osmbonuspack_v5.5')
+    compile(name:'osmbonuspack_v5.5', ext:'aar')
 
 }
