Change in manifest

--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -98,6 +98,10 @@
             android:theme="@style/AppTheme.NoActionBar" >
 
         </activity>
+
+        <activity android:name=".ctruong.uc.propsect.suggestion.view.activity.DetailProspect"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
     </application>
 
 </manifest>
