US83 / TA493 : notification server and phonintheair updated so that they can handle 2 different websocket connections. Now testing integration

--- a/android-phonintheair/app/src/main/AndroidManifest.xml
+++ b/android-phonintheair/app/src/main/AndroidManifest.xml
@@ -33,7 +33,6 @@
             android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
-
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </receiver>
@@ -47,6 +46,7 @@
             </intent-filter>
         </receiver>
 
+        <service android:name=".controller.service.CalendarService"/>
         <service android:name=".controller.service.CallService"/>
 
     </application>
