#Synchro UC  - Set up Authenticator

--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -125,14 +125,19 @@
             android:name=".ctruong.uc.propsect.suggestion.service.SyncService"
             android:enabled="true"
             android:exported="true"
-            android:process=":sync" >
+            android:process=":sync">
             <intent-filter>
                 <action android:name="android.content.SyncAdapter" />
             </intent-filter>
+
             <meta-data
                 android:name="android.content.SyncAdapter"
                 android:resource="@xml/sync_adapter" />
         </service>
+        <service
+            android:name=".ctruong.uc.propsect.suggestion.service.AuthenticatorService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
